build: Declare _GCR_HOST.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,8 @@
+substitutions:
+    _GCR_HOST: gcr.io
 steps:
 - id: build
   name: "gcr.io/cloud-builders/docker"
-  args: [ "build", "-t", "${_GCR_HOST:-gcr.io}/$PROJECT_ID/gcb2gh", "." ]
+  args: [ "build", "-t", "$_GCR_HOST/$PROJECT_ID/gcb2gh", "." ]
 images:
-- "${_GCR_HOST:-gcr.io}/$PROJECT_ID/gcb2gh"
+- "$_GCR_HOST/$PROJECT_ID/gcb2gh"
